--- a/main.css
+++ b/main.css
@@ -93,12 +93,12 @@
     width: 60%;
     height: 54px;
 }
-#formSearch {
+#form_search {
     display: flex;
     width: 100%;
     height: 100%;
 }
-#formSearch input {
+#form_search input {
     height: 100%;
     width: 100%;
     padding: 5px;
@@ -107,7 +107,7 @@
     border-radius: 5px 0 0 5px;
     outline: 0;
 }
-#formSearch .btnSearch {
+#form_search .btnSearch {
     padding: 0 20px;
     border: 0;
     background: #fff;
